[package]
name = "oo-host"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
uuid = { version = "1.8", features = ["v4", "serde"] }
